# ostool

./: .gitignore  Cargo.toml  README.en.md  README.md
.github/workflows/: check.yaml  release.yml
docs/开发日志/: 2026-04-03-session-释放与断电排查.md
docs/自动上电/: 中盛数字量输入输出操作手册.md
fitimage/: CHANGELOG.md  Cargo.toml
fitimage/src/: hash.rs
httpboot/: Cargo.toml  README.md
httpboot-loader/: Cargo.toml  README.md
httpboot-loader/src/: lib.rs  main.rs
httpboot-loader/src/uefi/: abi.rs  http.rs  loaded_image.rs
httpboot/src/: lib.rs  main.rs
httpboot/src/uefi/: abi.rs  console.rs  entry.rs  http.rs  loaded_image.rs  mod.rs
jkconfig/: CHANGELOG.md  Cargo.toml  README.md
jkconfig/src/: lib.rs  main.rs  run.rs
jkconfig/src/data/: app_data.rs  hook.rs  menu.rs  mod.rs  oneof.rs  path.rs  resolver.rs  schema.rs  visit.rs
jkconfig/src/ui/: input.rs  mod.rs  theme.rs
jkconfig/src/ui/components/: menu.rs
jkconfig/src/ui/components/editors/: integer_editor.rs  multi_select_editor.rs  oneof_editor.rs  string_editor.rs
jkconfig/src/web/: handlers.rs  routes.rs  server.rs
jkconfig/tests/: schema-obj.rs  schema.rs
loongarch64-uefi-loader/: Cargo.toml  Makefile  README.md  loader.c  loader.lds
loongarch64-uefi-loader/src/: abi.rs  boot.rs  console.rs  flow.rs  http.rs  loader.rs  main.rs  manifest.rs  tcp4.rs  tls.rs  uefi.rs
ostool/: CHANGELOG.md  Cargo.toml
ostool-server/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ostool-server/scripts/: install.sh  ostool-server.service  update.sh
ostool-server/src/: board_pool.rs  config.rs  http_boot.rs  lib.rs  main.rs  power.rs  process.rs  proxy_dhcp.rs  serial.rs  session.rs  state.rs
ostool-server/src/api/: error.rs  mod.rs  models.rs  router.rs
ostool-server/src/board_store/: fs.rs
ostool-server/src/dtb_store/: mod.rs
ostool-server/src/http_boot/: files.rs  https.rs
ostool-server/src/serial/: discovery.rs  network.rs  ws.rs
ostool-server/src/tftp/: config.rs  files.rs  mod.rs  service.rs  status.rs
ostool-server/src/web/: mod.rs
ostool-server/tests/: session_ws_lifecycle.rs
ostool-server/webui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ostool-server/webui/src/: App.vue  main.ts  style.css
ostool-server/webui/src/api/: client.test.ts  client.ts
ostool-server/webui/src/components/: NoticeBanner.vue  StatusPill.vue
ostool-server/webui/src/router/: index.ts
ostool-server/webui/src/stores/: ui.ts
ostool-server/webui/src/types/: api.ts
ostool-server/webui/src/utils/: tftpStatus.test.ts  tftpStatus.ts  time.test.ts  time.ts
ostool-server/webui/src/views/: BoardEditorView.test.ts  BoardEditorView.vue  BoardsView.vue  DtbView.test.ts  DtbView.vue  OverviewView.vue  ServerView.test.ts  ServerView.vue  SessionsView.test.ts  SessionsView.vue  TftpView.vue
ostool/src/: ctx.rs  lib.rs  logger.rs  main.rs  menuconfig.rs  tool.rs  utils.rs
ostool/src/board/: client.rs  config.rs  mod.rs  serial_stream.rs  terminal.rs
ostool/src/run/: httpboot.rs  mod.rs  output_matcher.rs  qemu.rs  shell_init.rs  tftp.rs  uboot.rs
ostool/src/run/ovmf_prebuilt/: fetch.rs
ostool/src/sterm/: mod.rs
ostool/tests/: qemu_byte_stream.rs
ostool/tests/ui/: pass_tool_configs.rs
scripts/: https_static_server.py
uboot-shell/: CHANGELOG.md  Cargo.toml
uboot-shell/examples/: env_var.rs  loady.rs  loady_real.rs
uboot-shell/src/: lib.rs  ymodem.rs
uboot-shell/tests/: test.rs
