[workspace]
exclude = ["assets/*", "fit_test"]
members = ["ostool", "uboot-shell", "jkconfig", "fitimage", "ostool-server"]
resolver = "3"

[workspace.dependencies]
crossterm = {version = "0.29", features = ["event-stream"]}
ratatui = "0.30"

# Data processing
anyhow = "1"
clap = {version = "4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

toml = "1.0"

# Error handling
thiserror = "2"

# Logging
log = "0.4"

schemars = {version = "1.0.4", features = ["derive"]}

env_logger = "0.11"

tokio = {version = "1", features = ["full"]}
