[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["os", "embedded", "development-tools"]
description = "A crate for communicating with u-boot"
edition = "2024"
keywords = ["u-boot", "shell", "embedded", "serial", "ymodem"]
license = "MIT"
name = "uboot-shell"
repository = "https://github.com/drivercraft/ostool"
version = "0.2.2"

[dependencies]
colored = "3"
futures = "0.3"
futures-timer = "3"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
indicatif = "0.18"
ntest = "0.9"
serialport = "4.6"
tokio = { workspace = true, features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = ["compat"] }
